<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_stream"
            android:checked="true"
            android:icon="@drawable/ic_view_stream_black_24dp"
            android:title="@string/nav_stream" />

        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/nav_explore" />

        <item
            android:id="@+id/nav_kreedo"
            android:icon="@drawable/ic_games_black_24dp"
            android:title="@string/nav_kreedo" />

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/nav_schedule" />

        <item
            android:id="@+id/nav_places"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_places" />

        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_team" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

    </group>
</menu>